k8s/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: http
      port: 80
      targetPort: 8000
