k8s/fastapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: production
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.class: "gce"
    cert-manager.io/cluster-issuer: "letsencrypt-http01"
spec:
  tls:
    - hosts:
        - service-base-auth.baltoon.jp
      secretName: fastapi-tls-secret
  rules:
    - host: service-base-auth.baltoon.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
